# claude-sessions

./: .gitignore  LICENSE  README.md  go.mod
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: assets.rs  config.rs  discover.rs  loader.rs  main.rs  meta.rs  open.rs  search.rs  server.rs  session.rs  status.rs  timefmt.rs  transcript.rs
cmd/ccs/: main.go
cmd/ccs-web/: main.go
core/: classify_test.go  discover.go  load.go  meta.go  open.go  search.go  session.go  status.go
docs/capture/: README.md  capture.mjs
frontend/: .npmrc  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/: BrowseModal.svelte  BrowseRow.svelte  CategoryControl.svelte  ContextMenu.svelte  ConversationModal.svelte  GroupBlock.svelte  MainActionBar.svelte  MainRow.svelte  PinControl.svelte  Popover.svelte  ShortcutsHelp.svelte  StatusBadge.svelte  StatusBar.svelte  TagsControl.svelte  TitleCell.svelte  Toast.svelte  UnpinConfirm.svelte  api.ts  clickable.ts  derive.ts  keyboard.ts  markdown.ts  store.svelte.ts  theme.svelte.ts  types.ts
tui/: logic.go  logic_test.go  model.go  styles.go  theme.go  update.go  update_input.go  view.go  viewport_test.go
web/: handlers.go  handlers_test.go  server.go
web/static/: index.html
